@@ -94,6 +94,8 @@ BUGFIXES:
 
   ZOOKEEPER-415. zookeeper c tests hang. (mahadev via phunt)
 
+  ZOOKEEPER-385. crctest failed on hudson patch test (mahadev via phunt)
+
 IMPROVEMENTS:
   ZOOKEEPER-308. improve the atomic broadcast performance 3x.
   (breed via mahadev)
